--- a/global.css
+++ b/global.css
@@ -4,7 +4,22 @@
 
 @layer base {
   .text-edge-outline {
-    -webkit-text-stroke: 1px rgba(255,255,255,0.3);
+    -webkit-text-stroke: 1px rgba(255, 255, 255, 0.3);
   }
-} 
 
+  /* Hide scrollbar for Chrome, Safari, and Edge */
+  body::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* IE and Edge scrollbar hiding */
+  body {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none;    /* Firefox */
+  }
+  
+  html {
+    overflow: -moz-scrollbars-none; /* Firefox */
+    overflow: hidden; /* Hide scrollbars */
+  }
+}
