--- a/global.css
+++ b/global.css
@@ -22,4 +22,20 @@
     overflow: -moz-scrollbars-none; /* Firefox */
     overflow: hidden; /* Hide scrollbars */
   }
+
+  .main-text{
+    color: var(--text-color, "white");
+  }
+
+  .sub-text{
+    color: var(--sub-text-color, "text-zinc-500");
+  }
+
+  .navbar-text{
+    color: var(--navbar-text-color, "text-zinc-500");
+  }
+
+  .navbar-text:hover{
+    color: var(--hover-color, "text-zinc-300");
+  }
 }
